# DyanamicSparseNN

./: DESIGN.md  README.md  config.py  evaluate.py  pyproject.toml  requirements.txt  train.py
data/: __init__.py  loader.py  preprocess.py
engine/: __init__.py  backward.py  graph.py  ops.py  tensor.py
experiments/: runner.py
models/: pruned.json  pruned.npz
nn/: __init__.py  activations.py  linear.py  loss.py  module.py  sequential.py
optim/: __init__.py  adam.py  optimizer.py  sgd.py
pruning/: __init__.py  importance.py  magnitude.py  mask.py  pruner.py  regrowth.py  scheduler.py  sparse_forward.py
results/: claim.txt  pareto_summary.csv  sweep_raw.csv
tests/: broadcast_test.py  gradient_check.py  pruning_test.py
utils/: checkpoint.py  flops.py  initialization.py  logger.py  metrics.py  plotting.py
